Issue #3470276 by spuky, nayana_mvr, smustgrave: To long Breadcrumbs are creating scrollbar

--- a/core/themes/olivero/css/components/breadcrumb.css
+++ b/core/themes/olivero/css/components/breadcrumb.css
@@ -79,6 +79,7 @@
 @media (min-width: 62.5rem) {
   .breadcrumb__list {
     overflow: visible;
+    width: auto;
     margin-inline-start: 0;
     margin-inline-end: 0;
     padding-block-end: 0;
